--- a/src/certiSys_frontend/src/index.html
+++ b/src/certiSys_frontend/src/index.html
@@ -10,15 +10,8 @@
   </head>
   <body>
     <main>
-      <img src="logo2.svg" alt="DFINITY logo" />
-      <br />
-      <br />
-      <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
-      </form>
-      <section id="greeting"></section>
+      <div id="root"></div>
+      <script src="./index.jsx" type="text/jsx"></script>
     </main>
   </body>
 </html>
